test/Fail/Issue2004Op.err
Issue2004Op.agda:17.12-15: error: [UnequalTerms]
Set₁ !=< x ∈ Y → x ∈ Y
when checking that the expression Set has type x ∈ Y → x ∈ Y
